[gd_scene load_steps=4 format=3 uid="uid://geywmdguejwv"]

[ext_resource type="Script" path="res://scripts/UI/match/status_details.gd" id="1_ynvy0"]
[ext_resource type="Theme" uid="uid://dx4axq65l727t" path="res://theme.tres" id="2_mhgh5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dj5y3"]
bg_color = Color(0.133333, 0.301961, 0.423529, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.690196, 0.768627, 0.886275, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="StatusDetails" type="Control"]
custom_minimum_size = Vector2(428, 100)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ynvy0")

[node name="ItemStatsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mhgh5")
theme_override_styles/panel = SubResource("StyleBoxFlat_dj5y3")

[node name="MarginContainer" type="MarginContainer" parent="ItemStatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Control" type="Control" parent="ItemStatsPanel/MarginContainer"]
layout_mode = 2

[node name="StatusNameLabel" type="Label" parent="ItemStatsPanel/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 33.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 22
text = "name"
vertical_alignment = 1

[node name="StatusDescriptionLabel" type="Label" parent="ItemStatsPanel/MarginContainer/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 18
text = "description"
vertical_alignment = 1
